<?xml version="1.0"?>
<package format="3">
  <name>student_robotics</name>
  <version>0.1.0</version>
  <description>ROS 2 exercise package — circle motion publisher and odometry monitor for TurtleBot3</description>
  <maintainer email="prakash.aryan@students.unibe.ch">Prakash Aryan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
